# playlist_convert

./: .env.example  .gitignore  README.md  mojo_dojo_casa_play_house.yaml  pyproject.toml  requirements.txt
playlist_convert/: cli.py  config.py  matcher.py  models.py  registry.py
playlist_convert/providers/: apple_music.py  base.py  spotify.py
tests/: test_apple_music.py  test_cli_create.py  test_matcher.py  test_registry.py  test_spotify.py
