[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playlist-convert"
version = "0.1.0"
description = "CLI tool to list and convert playlists between streaming music services"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "spotipy>=2.23",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.6",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock",
]

[project.scripts]
playlist-convert = "playlist_convert.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["playlist_convert*"]
